frontend/test/should_fail/index_exec_loop_node_fromIndexFromTo_index_mismatch.grg
#using "index_exec_model.gm"

sequence s(j:int)
{
	for{n:Node in nodesFromIndexFromToAscending(j, j, j + 1); true }
}